--- a/future-work.tex
+++ b/future-work.tex
@@ -15,7 +15,17 @@ Another interesting avenue of research would be to analyse metrics for digital p
 
 \subsection{Rethinking language diversity and typological relation}
 
-\citet{ginsburgh2011many} asked how many languages we really need; \citet{bender2010grand, bender2016linguistic} touched on the field of language typology being a resource for multilingual projection of language models and tooling. I was unable to find research on the number of languages which could functionality have multilingual NLP applied to them in the world. It ought to be possible to calculate a number of languages for which automatic hunspell dictionaries could be elicited; and then automatic POS taggers; and then automatic grammar models, and so on. Put succinctly, if Irish morphological parsers can be applied to Gaelic, could they also be applied to Cornish? And if they can be applied to Cornish, then it might be possible to cluster all of the Goidelic languages in one grouping, such that the amount of languages which require language development could be thought of less as individual entities but as groupings of typological features which can multilingual NLP can be adapted for. This would be an interesting area of research, although it is unclear how easy it would be to grasp the low-hanging fruit.
+\citet{ginsburgh2011many} asked how many languages we really need; \citet{bender2010grand, bender2016linguistic} touched on the field of language typology being a resource for multilingual projection of language models and tooling. I was unable to find research on the number of languages which could functionality have multilingual NLP applied to them in the world. It ought to be possible to calculate a number of languages for which automatic hunspell dictionaries could be elicited; and then automatic POS taggers; and then automatic grammar models, and so on.
+
+Put succinctly, if Irish morphological parsers can be applied to Gaelic, could they also be applied to Cornish? And if they can be applied to Cornish, then it might be possible to cluster all of the Goidelic languages in one grouping, such that the amount of languages which require language development could be thought of less as individual entities but as groupings of typological features which can multilingual NLP can be adapted for.
+
+One of the advantages of this area of research is that it would enable linguists to focus on language families, as opposed to individual languages. If the scale of languages in need of help can be brought down by a third, or half, then the scale of effort needed immediately would also be significantly altered. As the reviewer of \citet{ginsburgh2011many} stated:
+
+\begin{quote}
+...the economists actually argue that a certain degree of disenfranchisement is financially necessary, since the costs of absolute linguistic diversity lead to inefficient and potentially corrupt administrations. Once you accept that realist argument (and few moralists in the humanities want to entertain it seriously), once the question becomes how much disenfranchisement is tolerable, the calculations then concern how to wreak the least damage possible. \citep[672--673]{pym2013how}
+\end{quote}
+
+This would be an interesting area of research, although it is unclear how easy it would be to grasp the low-hanging fruit.
 
 \subsection{Metrics for code usage in LREC or ACL papers}
 
