--- a/low-resource-languages.tex
+++ b/low-resource-languages.tex
@@ -84,7 +84,7 @@ There are various popular metrics which can be used to classify the health of a 
 
 \subsubsection{The Graded Intergenerational Disruption Scale (GIDS)}
 
-The Graded Intergenerational Disruption Scale (GIDS), developed by \citet{fishman1991reversing}, is the earliest and most well known of the scales. It rates languages based on their domains of use, and on the amount of transmission and education which continues to the next generation through the parents. Figure~\ref{fig:gids} summarises the different stages. As a language ceases to be used in one domain, it becomes less likely that it will in the future, and more likely that parents will consider the language to be less useful than another. Over time, this causes the language to lose speakers (although the process is not inevitable; for examples, language policy in Quebec helped secure and revitalise the language over the past half century \citep{bourhis2001reversing}). Generally, as a language's usage deteriorates and the language becomes more imperilled, the language is assigned a higher classification in GIDS, with Level 8 being the least stable, and Level 1 being the most. 
+The Graded Intergenerational Disruption Scale (GIDS), developed by \citet{fishman1991reversing}, is the earliest and most well known of the scales. It rates languages based on their domains of use, and on the amount of transmission and education which continues to the next generation through the parents. Figure~\ref{fig:gids} summarises the different stages. As a language ceases to be used in one domain, it becomes less likely that it will in the future, and more likely that parents will consider the language to be less useful than another. Over time, this causes the language to lose speakers (although the process is not inevitable; for examples, language policy in Quebec helped secure and revitalise the language over the past half century \citep{bourhis2001reversing}). Generally, as a language's usage deteriorates and the language becomes more imperilled, the language is assigned a higher classification in GIDS, with Level 8 being the least stable, and Level 1 being the most.
 
 \begin{figure}
  \centering
@@ -96,7 +96,7 @@ The Graded Intergenerational Disruption Scale (GIDS), developed by \citet{fishma
 \subsubsection{The UNESCO measurement scale}
 \label{subsec:unesco}
 
-Chronologically, the UNESCO rating was the next major scale in the field. The United Nations Educational, Scientific and Cultural Organization (UNESCO) is a specialised agency of the United Nations. In 2001, at the 31st Session of the UNESCO General Conference, they officially recognised that biodiversity, cultural diversity, and linguistic diversity are related. This viewpoint is relatively recent, and reflects increasing appreciation that culturally diverse regions tend to collocate with biodiverse regions, and that saving diversity implies saving both \citep{nettle2000vanishing, maffi2001biocultural, anderson2006language, krauss2007keynote, gorenflo2012co} (as discussed explicitly in \citet{maffi2001}, of which all of the authors were also members of the UNESCO Ad Hoc Expert Group on Endangered Languages). Encouragingly, UNESCO also clarified at this event that sustaining and encouraging linguistic diversity lies within their charter.
+Chronologically, the UNESCO rating was the next major scale in the field. The United Nations Educational, Scientific and Cultural Organization (UNESCO) is a specialised agency of the United Nations. In 2001, at the 31st Session of the UNESCO General Conference, they officially recognised that biodiversity, cultural diversity, and linguistic diversity are related. This viewpoint is relatively recent, and reflects increasing appreciation that culturally diverse regions tend to collocate with biodiverse regions, and that saving diversity implies saving both \citep{nettle2000vanishing, maffi2001biocultural, maffi2004world, anderson2006language, krauss2007keynote, gorenflo2012co} (as discussed explicitly in \citet{maffi2001}, of which all of the authors were also members of the UNESCO Ad Hoc Expert Group on Endangered Languages). Encouragingly, UNESCO also clarified at this event that sustaining and encouraging linguistic diversity lies within their charter.
 
 In their publication from that conference, \citet{brenzinger2003language} lay out nine different metrics for measuring language vitality: six evaluate the vitality, two language attitudes, and one related to urgency of documentation. The UNESCO system is rigorous in its refusal to apply a single score to a language, as that would smooth over the complexities of language usage. The six factors for vitality are: intergenerational language transmission (as with GIDS), absolute number of speakers, proportion of speakers within the total population, trends in existing language domains, response to new domains and media, and materials for language education and literacy.
 
@@ -157,8 +157,13 @@ EGIDS - the Expanded GIDS - serves these needs by providing more granular defini
 They end with a quote from \citet{fishman2001can}, which explains further the purpose of EGIDS, and clarifies the general intent of language analysts in building these metrics:
 
 \begin{quote}
-Thus, any theory and practice of assistance to threatened languages - whether the threat be a threat to their very lives, on the one hand, or a much less serious functional threat, on  the  other  hand - must  begin  with  a  model  of  the  functional  diversification  of languages. If analysts can appropriately identify the functions that are endangered as a result of the impact of stronger languages and cultures on weaker ones, then it may become easier to recommend which therapeutic steps must be undertaken in order to counteract any injurious impact that occurs. The purpose of our analyses must be to understand, limit and rectify the societal loss of functionality in the weaker language when  two  languages  interact  and  compete  for  the  same  functions within  the  same
-ethnocultural  community  and  to  differentiate  between  life-threatening  and  non-life-threatening losses.
+Thus, any theory and practice of assistance to threatened languages - whether the threat be a threat to their very lives, on the one hand, or a much less serious functional threat, on  the  other  hand - must  begin  with  a  model  of  the  functional  diversification  of languages. If analysts can appropriately identify the functions that are endangered as a result of the impact of stronger languages and cultures on weaker ones, then it may become easier to recommend which therapeutic steps must be undertaken in order to counteract any injurious impact that occurs. The purpose of our analyses must be to understand, limit and rectify the societal loss of functionality in the weaker language when  two  languages  interact  and  compete  for  the  same  functions within  the  same ethnocultural  community  and  to  differentiate  between  life-threatening  and  non-life-threatening losses.
+\end{quote}
+
+\citet{simons2013world} presented a review of \citepos{krauss92} clarion call \emph{The world's languages in crisis}, twenty years on, and the picture is less alarming than it initially appeared, thanks in part to the efforts of linguists since Krauss's initial paper.
+
+\begin{quote}
+This analysis has enabled us to confirm that, as Fishman predicted, the largest number, fully two-thirds, of the languages of the world are safely maintained in everyday oral use in their communities (EGIDS 6a) or are at a stronger level of development and recognition (EGIDS 0 - 5). Nevertheless, the statistics also reveal that 29\% of the world's languages are in some stage of loss or shift (EGIDS 6b - 9). Most tellingly, this is more languages than the 25\% that are in some stage of development beyond oral use alone (EGIDS 0 - 5). \citep[17]{simons2013world}
 \end{quote}
 
 \subsubsection{The Language Endangerment Index (LEI)}
@@ -178,13 +183,13 @@ The LEI uses four factors: intergenerational transmission, absolute number of sp
 Some may prefer a more nuanced examination of a language's vitality, with the view that the factors responsible for a language's endangerment are too complex to be compared across languages. Researchers of this view would rally against quantitative measures, stating that quantitative measures can hardly be accurate. ... ELCat researchers, while sympathetic to these points of view, maintain that without understanding and investigating fundamental common factors responsible for language endangerment, very little pro\-gress will be made in assessing language vitality and, consequently, less can be done to help communities preserve their languages. ELCat strikes a balance between these different perspectives. \citep[279]{lee2016assessing}
 \end{quote}
 
-As \citet{grenoble2016response} points out, this misses the point of qualitative rebuttals, by claiming that accuracy is the most salient argument. It does not have to be, as there are more pressing concerns. For instance, all of the metrics were built on the assumptions that quantifying language endangerment is useful, and that assessment directly leads to empowering communities to revitalise their language - indeed, \citet{lee2016assessing} directly state this in the quote above. Neither of these are directly backed up by empirical research \citep{grenoble2016response}. 
+As \citet{grenoble2016response} points out, this misses the point of qualitative rebuttals, by claiming that accuracy is the most salient argument. It does not have to be, as there are more pressing concerns. For instance, all of the metrics were built on the assumptions that quantifying language endangerment is useful, and that assessment directly leads to empowering communities to revitalise their language - indeed, \citet{lee2016assessing} directly state this in the quote above. Neither of these are directly backed up by empirical research \citep{grenoble2016response}.
 
 On another note, language itself is not indisputably something that is countable or measurable, and to think so is to reflect Western, modernist ideologies surrounding language, viewing a language as a distinct entity which is formalised in writing and education. Language could be viewed alternatively as inextricable from the speaker and the utterance, and this view is more likely to be taken by language groups which view themselves as separate from a nation-state or an ethnographic group \citep{bodo2017language}. To view language otherwise is to confine language to a countable, commodifiable entity in a post-colonial sense, which affects how the language is viewed and can have real effects on language communities. Even viewing linguistic biodiversity as something to be `saved' raises ideological  concerns, as Haspelmath (one of the main editors of the \textit{World Atlas of Language Structures} \citep{wals}) notes.\footnote{\href{https://dlc.hypotheses.org/195}{https://dlc.hypotheses.org/195}. \last{May~2}} Indeed, post-colonial attitudes towards language endangerment may be endemic in the field of academic linguistics; \citet{newman1998we} certainly suggests that non-Western linguists cannot adequately document or revitalise their own languages without Western training, which presupposes that to be an informed researcher one must also conform to Western ideologies. Against this backdrop, \citet{lee2016assessing}'s claims that accuracy is something that can be attained seems to miss the mark; rather, the canonical approach to metrics is in itself a flawed approach that carries with it certain uncomfortable presumptions.
 
 This thesis cannot hope to resolve these issues, nor is it meant to be an overview of the field of language vitality or endangerment as ideology. However, it is worth noting that metrics of language vitality do not exist in a vacu\"{u}m, and that documentation and computational efforts are also a part of wider questions. Literacy is not a domain into which a language has to ascend to be seen as `safe' or `vital', and technological progress should not be viewed independently of an assessment of what exactly progress is.
 
-Some actions can be taken in this paper, however. Terminologically, `low resource' is intentionally somewhat neutral, as compared to `minority', `endangered', or other terms that reflect Western viewpoints. Similarly, using the term {\it language vitality} as opposed to {\it language endangerment} "represents a significant shift in the representation of attitudes toward the rhetoric of indigenous languages to one away from dire predictions about endangerment to action-oriented attitudes about vitality and sustainability \citep{grenoble2016response}." These terms will be used for the rest of this paper, and any statements about resource development should be viewed as part of a narrower question of digital development (in the sense of building resources) for a specific, almost na\"ively countable view of language, unless otherwise specified. 
+Some actions can be taken in this paper, however. Terminologically, `low resource' is intentionally somewhat neutral, as compared to `minority', `endangered', or other terms that reflect Western viewpoints. Similarly, using the term {\it language vitality} as opposed to {\it language endangerment} "represents a significant shift in the representation of attitudes toward the rhetoric of indigenous languages to one away from dire predictions about endangerment to action-oriented attitudes about vitality and sustainability \citep{grenoble2016response}." These terms will be used for the rest of this paper, and any statements about resource development should be viewed as part of a narrower question of digital development (in the sense of building resources) for a specific, almost na\"ively countable view of language, unless otherwise specified.
 
 \subsection{Digital presence}
 
