--- a/references.bib
+++ b/references.bib
@@ -15,7 +15,6 @@
   year={2014}
 }
 
-
 @article{google2016google,
   title = {Google's Neural Machine Translation System: Bridging the Gap between Human and Machine Translation},
   author  = {Yonghui Wu and Mike Schuster and Zhifeng Chen and Quoc V. Le and Mohammad Norouzi and Wolfgang Macherey and Maxim Krikun and Yuan Cao and Qin Gao and Klaus Macherey and Jeff Klingner and Apurva Shah and Melvin Johnson and Xiaobing Liu and Łukasz Kaiser and Stephan Gouws and Yoshikiyo Kato and Taku Kudo and Hideto Kazawa and Keith Stevens and George Kurian and Nishant Patil and Wei Wang and Cliff Young and Jason Smith and Jason Riesa and Alex Rudnick and Oriol Vinyals and Greg Corrado and Macduff Hughes and Jeffrey Dean},
@@ -243,14 +242,6 @@
   author={Liberman, Mark},
   journal={Bird and Simons},
   year={2000}
-}
-
-
-@misc{lsa2008ethics,
-  title={{Linguistic Society of America} Ethics Statement},
-  author={Claire Bowern and Lise Dobrin and Penny Eckert and Ted Gibson and Jane Hill and Keith Johnson and Jack Martin and Philip Rubin and Susan Steele and Sara Trechter and Monica Macaulay},
-  publisher={Linguistic Society of America},
-  year={2008}
 }
 
 @article{katz2016report,
@@ -909,7 +900,7 @@ publisher={Blackwell}
 
 
 // Note: This is the reviw of ginsburgh2011many
-@article{doi:10.1080/10848770.2013.804729,
+@article{pym2013how,
   author = {Pym, Anthony},
   title = {How Many Languages Do We Need? The Economics of Linguistic Diversity},
   journal = {The European Legacy},
@@ -1087,7 +1078,7 @@ publisher={Blackwell}
 @article{salminen2007europe,
   title={Europe and {North Asia}},
   author={Salminen, Tapani},
-  journal={Encyclopedia of the world’s endangered languages},
+  journal={Encyclopedia of the world's endangered languages},
   pages={211--280},
   year={2007}
 }
@@ -1239,10 +1230,17 @@ title = {Directory International cooperation programs for the protection and pro
  booktitle={Proceedings of the Sixth Workshop on Statistical Machine Translation},
  pages={501--511},
  year={2011},
- organization={Association for Computational Linguistics}
+ series = {WMT '11},
+ isbn = {978-1-937284-12-1},
+ location = {Edinburgh, Scotland},
+ numpages = {11},
+ url = {https://dl.acm.org/citation.cfm?id=2132960.2133030},
+ note = {Last accessed May~1, 2018},
+ acmid = {2133030},
+ organization = {Association for Computational Linguistics},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
 }
-
-
 
 @inproceedings{agic2015if,
  title={If all you have is a bit of the {Bible}: Learning {POS} taggers for truly low-resource languages},
@@ -1456,7 +1454,7 @@ title = {Directory International cooperation programs for the protection and pro
 @incollection{chiarcos2013building,
   title={Building a Linked Open Data cloud of linguistic resources: Motivations and developments},
   author={Chiarcos, Christian and Moran, Steven and Mendes, Pablo N and Nordhoff, Sebastian and Littauer, Richard},
-  booktitle={The People’s Web Meets NLP},
+  booktitle={The People's Web Meets NLP},
   pages={315--348},
   year={2013},
   publisher={Springer}
@@ -1864,23 +1862,6 @@ title = {Directory International cooperation programs for the protection and pro
   year={2014}
 }
 
-@inproceedings{Lewis:2011:CMD:2132960.2133030,
- author = {Lewis, William D. and Munro, Robert and Vogel, Stephan},
- title = {Crisis {MT}: Developing a Cookbook for {MT} in Crisis Situations},
- booktitle = {Proceedings of the Sixth Workshop on Statistical Machine Translation},
- series = {WMT '11},
- year = {2011},
- isbn = {978-1-937284-12-1},
- location = {Edinburgh, Scotland},
- pages = {501--511},
- numpages = {11},
- url = {https://dl.acm.org/citation.cfm?id=2132960.2133030},
- note      = {Last accessed May~1, 2018},
- acmid = {2133030},
- publisher = {Association for Computational Linguistics},
- address = {Stroudsburg, PA, USA},
-}
-
 @incollection{grenoble2011cambridge,
  address  = {Cambridge},
  author  = {Lenore A. Grenoble},
@@ -1997,34 +1978,6 @@ title = {Directory International cooperation programs for the protection and pro
   journal={Linguistic and Cultural Diversity in Cyberspace},
   pages={132},
   year={2015}
-}
-
-@inproceedings{zagalsky2015,
- title={The emergence of {GitHub} as a collaborative platform for education},
- author={Zagalsky, Alexey and Feliciano, Joseph and Storey, Margaret-Anne and Zhao, Yiyun and Wang, Weiliang},
- booktitle={Proceedings of the 18th Association for Computing Machinery (ACM) Conference on Computer Supported Cooperative Work \& Social Computing},
- pages={1906--1917},
- year={2015},
- organization={Association for Computing Machinery (ACM)}
-}
-
-@inproceedings{storey2014,
-author = {Storey, Margaret-Anne and Singer, Leif and Cleary, Brendan and Figueira Filho, Fernando and Zagalsky, Alexey},
-title = {The ({R}) Evolution of Social Media in Software Engineering},
-booktitle = {Proceedings of the on Future of Software Engineering},
-series = {Future of Software Engineering (FOSE) 2014},
-year = {2014},
-isbn = {978-1-4503-2865-4},
-location = {Hyderabad, India},
-pages = {100--116},
-numpages = {17},
-url = {https://doi.acm.org/10.1145/2593882.2593887},
-note={Last accessed May~1, 2018},
-doi = {10.1145/2593882.2593887},
-acmid = {2593887},
-publisher = {Association for Computing Machinery (ACM)},
-address = {New York, NY, USA},
-keywords = {Collaboration, Social Media, Software Engineering},
 }
 
 @book{MacKenzie-and-Jancewicz-1994,
