--- a/case-studies.tex
+++ b/case-studies.tex
@@ -57,7 +57,7 @@ Ideally, researchers would start to open source more of their code involving Gae
 \subsection{Naskapi}
 \label{sec:naskapi}
 
-In October 2017 I travelled to Kawawachikamach and informally interviewed linguists working on a Naskapi Bible, visited the school and talked to teachers at length about language efforts there, and talked to individual Naskapi speakers about their thoughts on the language and how it is used. Below, I give a brief overview of Naskapi, note how it would be rated according the metrics covered in Section~\ref{subsec:metrics}, and discuss language resource development. \citet{jancewicz2002applied} is the main source of published information on Naskapi computational developments; I give an update, 15 years on, given my experience in Kawawachikamach. I was unfortunately unable to meet Bill Jancewicz, the SIL missionary there, at that time.
+In October 2017 I travelled to Kawawachikamach and informally interviewed linguists working on a Naskapi Bible, visited the school and talked to teachers at length about language efforts there, and talked to individual Naskapi speakers about their thoughts on the language and how it is used. Below, I give a brief overview of Naskapi, note how it would be rated according the metrics covered in Section~\ref{subsec:metrics}, and discuss language resource development. \citet{jancewicz2002applied} is the main source of published information on Naskapi computational developments; I give an update, 15 years on, given my experience in Kawawachikamach. %I was unfortunately unable to meet Bill Jancewicz, the SIL missionary there, at that time.
 
 \subsubsection{Language background}
 \label{sec:naskapi-language-background}
@@ -100,29 +100,39 @@ hare\\
 
 Regardless of this paucity of data, there are certainly literary resources in Naskapi (see the next section) - if not many digitally. In the case of Naskapi, the Emergent level proposed by \citet{gibson2016assessing} may be more fitting than either Dead or Vital.
 
-\subsubsection{Orthographical developments and written corpora creation}
-Naskapi has two scripts; Latin and the Unified Canadian Aboriginal Syllabics \citep{wals-141}, which were added to Unicode in 1999.\footnote{\href{https://www.unicode.org/standard/supported.html}{https://www.unicode.org/standard/supported.html}. \last{April~27}} The Syllabics were introduced by missionaries in the 19th century, and quickly adopted by all Cree language communities, who approached near universal literacy \citep{bennett1991cree}. In Kawawachikamach and Schefferville (and on the train there), there are many examples of writing in syllabics. As well, Naskapi speakers often use accents on Roman characters. For instance, a macron, such as \^u is used in place of a double \emph{uu} to indicate vowel length. 
+\subsubsection{Orthography}
+Naskapi has two scripts; Latin and the Unified Canadian Aboriginal Syllabics \citep{wals-141}, which were added to Unicode in 1999.\footnote{\href{https://www.unicode.org/standard/supported.html}{https://www.unicode.org/standard/supported.html}. \last{April~27}} The Syllabics were introduced by missionaries in the 19th century, and quickly adopted by all Cree language communities, who approached near universal literacy \citep{bennett1991cree}. In Kawawachikamach and Schefferville (and on the train there), there are many examples of writing in syllabics. As well, Naskapi has its own standard orthographical conventions for Roman characters. For instance, a macron, such as \^u is used in place of a double \emph{uu} to indicate vowel length.
 
 \citet{jancewicz2002applied} gives an insightful overview of computational technology in Naskapi. They note that Naskapi often were not involved in typesetting literature in syllabics, and that few became typists when the first syllabic typewriters were introduced. Jancewicz is particularly well placed as the author of this paper, as he and his wife were the first two missionaries sent from SIL to the Naskapi community (MacKenzie is also, as she has worked for decades with Cree communities as well as with the Naskapi). They worked with the Band Office (the local council) installing the first word processing system for syllabics, trained Naskapi speakers, and created the first Naskapi TrueType font.
 
-Jancewicz also helped to install Keyman,\footnote{\href{https://keyman.com/}{https://keyman.com/}. \last{April~27}} "a keyboarding utility now ... that allowed the programming of custom keyboard input for various languages and character sets." \citep[85]{jancewicz2002applied} Keyman is now free, open source software available on GitHub.\footnote{\href{https://github.com/keymanapp}{https://github.com/keymanapp}. \last{April~27}} It allows a user to type Roman letters which are converted to the right phrase in Syllabics, and is forgiving for phonemic variants. For instance, "ju", "chu", "tchu" and so on might all be interpreted and replaced by the appropriate syllabic \sylla{cho}. % TODO Ask if this is the right syllabic
+Jancewicz also helped to install Keyman,\footnote{\href{https://keyman.com/}{https://keyman.com/}. \last{April~27}} "a keyboarding utility ... that allowed the programming of custom keyboard input for various languages and character sets." \citep[85]{jancewicz2002applied} Keyman is now free, open source software available on GitHub.\footnote{\href{https://github.com/keymanapp}{https://github.com/keymanapp}. \last{April~27}} It allows a user to type Roman letters which are converted to the right phrase in Syllabics, and is forgiving for phonemic variants. For instance, "ju", "chu", "tchu" and so on might all be interpreted and replaced by the appropriate syllabic \sylla{co}. % TODO Ask if this is the right syllabic
 Keyman must be installed manually on each computer to use it, which reflects a considerable amount of upfront time for Jancewicz. Indeed, the importance of their support to Naskapi digital ascendancy cannot be understated (except, perhaps, by Jancewicz himself):
 
 \begin{quote}
 "Since 1988, the resident linguist has maintained all of his own language learning materials and language data on computer. He has also provided the local technical support that is needed in a small, isolated community, especially with regard to the esoteric development of computer programs that allow syllabic word processing. While it is not impossible to use computers in Native language work without a full-time, on-site computer resource person, it has been an obvious asset to have such a person available to provide training and technical support." \citep[86]{jancewicz2002applied}
 \end{quote}
 
-In recent years, the Naskapi Development Council (NDC), which works with translators provided by the Band, has produced a Naskapi to English bilingual dictionary in three volumes \citep{MacKenzie-and-Jancewicz-1994}. The NDC is largely staffed by linguists from the Summer Institute of Linguistics, funded by Wycliffe Bible Translators and private fundraising from Christian communities.\footnote{\href{https://www.wycliffe.org/}{https://www.wycliffe.org/}. \last{April~27}} Today, the SIL linguists are a team of six: two long term linguists, and two pairs of husband and wife pairs who are training how to work as Bible translators in this community before moving on to working with other Cree communities in Canada. Naskapi does not have a complete Bible. A new testament, started in the 1970's, was recently published \citep{naskapi-new-testament}. Genesis, Exodus, and Psalms, have also been translated, and several children stories and books of oral legends from an elder have been produced - as well, \citet{jancewicz2002applied} note the creation of a monthly newsletter, a history, and translations of official business of the administrations (which may provide excellent multilingual corpora). The full-time translators are two people: a young woman in her mid-twenties, and an older man of around fifty years of age. At times, elders also contribute to the Bible translation effort by marking up pre-publication drafts, which they then go over with the translators.
+Currently, the school has a computer lab with over a dozen computers, but no in-house computer technician. One of the Wycliffe translators needed to visit the school to check on Keyman updates, and the students are not regularly trained in how to set up Keyman on their own, or how to set it up on their phones or other portable devices, although there have been efforts to train key teachers in how to teach computational use of Naskapi \citep{jancewicz1998developing}. While Facebook and other online platforms are increasingly popular, the majority of talking takes place in Naskapi written in local characters, or in English.
+
+However, it is crucial that development and education regarding computational literacy continue to be mandated and improved. "Using a computer for mother-tongue language work raises speakers' assessment of the worth of their own language, as well as provides an avenue for sharing their work and ideas through reproduction and publication." \citet{jancewicz2002applied}
+
+\citet{jancewicz2002applied} was written before wide adoption of the Unicode standard by browsers, and before the now omnipresent ubiquity of the internet and smartphones. \citet{jancewicz2012cree} gives an update on fonts available for Cree languages, including Naskapi. It also mentions Languagegeek,\footnote{\href{http://www.languagegeek.com/algon/naskapi/naskapi.html}{http://www.languagegeek.com/algon/naskapi/naskapi.html}. \last{May~3}} a website that has useful information on downloading fonts for Naskapi.
+
+\begin{quote}
+One of the most important sources for Cree Unicode fonts is the LanguageGeek website by Chris Harvey. Chris Harvey developed "Aboriginal Serif Unicode", which has gone through some changes and improvements. His current strategy is to serve logical regions of syllabic users with fonts that contain subsets of the UCAS block, rather than one font that contains them all. His work is very impressive and professional but some readers may find it difficult to read because of somewhat close letter- and especially word-spacing. \citep[17]{jancewicz2012cree}
+\end{quote}
+
+\subsubsection{Corpora creation}
+
+In recent years, the Naskapi Development Council (NDC), which works with translators provided by the Band, has produced a Naskapi to English bilingual dictionary in three volumes \citep{MacKenzie-and-Jancewicz-1994}. The NDC is largely staffed by linguists from the Summer Institute of Linguistics, funded by Wycliffe Bible Translators and private fundraising from Christian communities.\footnote{\href{https://www.wycliffe.org/}{https://www.wycliffe.org/}. \last{April~27}} Today, the SIL linguists are a team of six: two long term linguists, and two pairs of husband and wife pairs who are training how to work as Bible translators in this community before moving on to working with other Cree communities in Canada. 
+
+Naskapi does not have a complete Bible. A new testament, started in the 1970's, was recently published \citep{naskapi-new-testament}. Genesis, Exodus, and Psalms, have also been translated, and several children stories and books of oral legends from an elder have been produced - as well, \citet{jancewicz2002applied} note the creation of a monthly newsletter, a history, and translations of official business of the administrations (which may provide excellent multilingual corpora). The full-time translators are two people: a young woman in her mid-twenties, and an older man of around fifty years of age. At times, elders also contribute to the Bible translation effort by marking up pre-publication drafts, which they then go over with the translators.
 
 When there is a need to come up with a new term, the elders are consulted, and they agree on an appropriate translation. For instance, {\it grill} is translated as `metal-net'. `grill' is not a  pre\"{e}xisting word in Naskapi, but `net' is, and it is easy to imagine the metaphor of a grill on which you braise meat as being a metal net. However, these decisions are not often used outside of the Bible. Likewise, when there is a term which needs to be invented at the school, the teachers there decide on an appropriate term - for instance, for situations like Halloween, where `Frankenstein' may need to be translated into a local alternative. These decisions are largely one-off, although they may be used year to year, and informally recorded in their respective domains.
 
 The linguists use the Fieldworks Language Explorer (FLEx) \footnote{\href{https://software.sil.org/fieldworks/}{https://software.sil.org/fieldworks/}. \last{April~27}} to document new linguistic terms. FLEx was developed by SIL International, and provides linguists with an out-of-the-box solution for recording linguistics terms using interlinear glossed text. It is also open source, and available on GitHub.\footnote{\href{https://github.com/sillsdev/FieldWorks}{https://github.com/sillsdev/FieldWorks}. \last{April~27}} Users can export as a PDF (among other file formats), or export words to an online interface known as Webonary.\footnote{\href{https://www.webonary.org/configuring-the-dictionary-in-flex/}{https://www.webonary.org/configuring-the-dictionary-in-flex/}. \last{April~27}} This allows language workers to automatically create a useable, free dictionary for members of the community.
 
 % TODO Ask if I can access the Webonary
-
-Currently, the school has a computer lab with over a dozen computers, but no in-house computer technician. One of the Wycliffe translators needed to visit the school to check on Keyman updates, and the students are not regularly trained in how to set up Keyman on their own, or how to set it up on their phones or other portable devices, although there have been efforts to train key teachers in how to teach computational use of Naskapi \citep{jancewicz1998developing}. While Facebook and other online platforms are increasingly popular, the majority of talking takes place in Naskapi written in local characters, or in English.
-
-However, it is crucial that development and education regarding computational literacy continue to be mandated and improved. "Using a computer for mother-tongue language work raises speakers' assessment of the worth of their own language, as well as provides an avenue for sharing their work and ideas through reproduction and publication." \citet{jancewicz2002applied}
 
 \subsubsection{Computational tools}
 
@@ -134,15 +144,9 @@ All told, computational work that is easily accessible on the web is exceedingly
 
 While FLEx is open source, none of the linguists edit the code for it or use the codebase, depending on SIL International to keep the product up to date. Keyman is likewise not edited, although it is installed on local computers. The Naskapi community website, run by the Naskapi Nation of Kawawachikamach, does have a webpage on installing syllabics,\footnote{\href{http://www.naskapi.ca/en/Install-syllabics}{http://www.naskapi.ca/en/Install-syllabics}. \last{April~27}} which may be useful for some speakers.
 
-\citet{jancewicz2002applied} was written before wide adoption of the Unicode standard by browsers, and before the now omnipresent ubiquity of the internet and smartphones. \citet{jancewicz2012cree} gives an update on fonts available for Cree languages, including Naskapi. It also mentions Languagegeek,\footnote{\href{http://www.languagegeek.com/algon/naskapi/naskapi.html}{http://www.languagegeek.com/algon/naskapi/naskapi.html}. \last{May~3}} a website that has useful information on downloading fonts for Naskapi. 
-
-\begin{quote}
-One of the most important sources for Cree Unicode fonts is the LanguageGeek website by Chris Harvey. Chris Harvey developed "Aboriginal Serif Unicode", which has gone through some changes and improvements. His current strategy is to serve logical regions of syllabic users with fonts that contain subsets of the UCAS block, rather than one font that contains them all. His work is very impressive and professional but some readers may find it difficult to read because of somewhat close letter- and especially word-spacing. \citep[17]{jancewicz2012cree}
-\end{quote}
-
 \subsubsection{Naskapi language resource status today}
 
-Unfortunately, the situation for Naskapi does not appear to have changed; a small group of external linguists provide much of the language resources for the community.
+Today, a small group of external linguists still provide much of the language resources for the community, although collaboration with the Band continues.
 
 \begin{quote}
 "The authors hope that the dichotomy between "resource people" and "aboriginal people" reflected in the section headings above would become less and less distinct. ... As a growing number of local people gain experience and expertise to become their own resource persons, such a dichotomy will dissolve, and all the vital resources for language development will exist at a community level. However, until this ideal is realised, small language communities such as these must continue to identify and avail themselves of professional and academic resources found outside their communities." \citep[89]{jancewicz2002applied}
@@ -150,6 +154,6 @@ Unfortunately, the situation for Naskapi does not appear to have changed; a smal
 
 This remains just as true, fifteen years on. There is work which could be done; for instance, moving the silo'ed dictionary efforts into the public web, and using bilingual texts from the Band Office to bootstrap corpora, POS taggers, spellcheckers (there is not a Hunspell yet), and perhaps MT systems. However, this work would need to be matched by on-the-ground work by local community members - and, as \citet[90]{jancewicz2002applied} finally notes: "The initial learning curve is sometimes steep, but there is no substitute for hands-on experience."
 
-Open source is less of a concern for Naskapi as is general software; the community is so small that any code is liable to made by community members and open sourced, anyway. However, the tools which the linguists use to develop languages benefit from open source. Any SIL missionary can contribute to FLEx, which means that incremental changes in different communities can be folded back into work in Naskapi. Likewise, any work done on Cree or any related languages can be applied or projected onto Naskapi more easily if it is open source. Open source is not a {\it sine qua non} for Naskapi technological development, then; but it is surely a benefit.
+Open source is less of a concern for Naskapi as is general software; the community is so small that any code is liable to made by community members and open sourced, anyway. However, the tools which the linguists use to develop languages benefit from open source. Any SIL missionary can contribute to FLEx, which means that incremental changes in different communities can be folded back into work in Naskapi. Likewise, any work done on Cree or any related languages can be applied or projected onto Naskapi more easily if it is open source. Open source is not a {\it sine qua non} for Naskapi technological development, then; but it could be a benefit.
 
 % TODO Ask Bill for a copy of his MA thesis "Grammar enhanced biliteracy: Naskapi language structures for facilitating reading in Naskapi"
