--- a/references.bib
+++ b/references.bib
@@ -55,12 +55,18 @@
   publisher={Taylor \& Francis}
 }
 
-
 @unpublished{littauerfacebook,
   title={Constructing Corpora for Low Resource Languages from Social Media},
   author={Richard Littauer},
   year={2013},
   note={Draft}
+}
+
+@unpublished{littauerllarriesh,
+  title={The Dictionary of {L}l\'{a}rri\'{e}sh ({L}lama)},
+  author={Richard Littauer},
+  year={2010},
+  note={Unpublished}
 }
 
 @inproceedings{scannell2013endangered,
@@ -674,9 +680,18 @@ publisher={Blackwell}
   title={Na'vi-{English} Dictionary, version 13.63},
   author={Miller, Mark and Aean, Tirea and Tuiq and Littauer, Richard},
   year={2018},
-  publisher={learnnavi.org},
+  publisher={Learn Na'vi},
   url={http://eanaeltu.learnnavi.org/dicts/NaviDictionary.pdf},
   note={Last accessed May~1, 2018}
+}
+
+@book{dothrakidictionary,
+  title={The {Dothraki} Language Dictionary (ver 3.11)},
+  author={Hrakkar and Ingsve and Tuiq and Littauer, Richard},
+  year={2016},
+  publisher={Learn Dothraki},
+  url={https://docs.dothraki.org/Dothraki.pdf},
+  note={Last accessed May~3, 2018}
 }
 
 @book{wmannis,
